--- a/services.html
+++ b/services.html
@@ -83,6 +83,7 @@
         <div class="boxes">
           <div class="content">
             <div class="container overflow-hidden">
+              <!-- row 1 -->
               <div class="row">
                 <!-- item 1 -->
                 <div class="col border border-dark-subtle p-4 rounded">
@@ -103,11 +104,11 @@
                 <div class="col border border-dark-subtle p-4 rounded">
                   <div class="title d-flex">
                     <div class="logo rounded me-4 mb-4 bg-light">
-                      <i class="fa-solid fa-users"></i>
+                      <i class="fa-solid fa-shield-halved"></i>
                     </div>
                     <div class="food__name">
-                      <span class="" >01</span>
-                      <p class="">Soup</p>
+                      <span class="" >02</span>
+                      <p class="">Drinks</p>
                     </div>
                   </div>
                   <div class="text">
@@ -118,11 +119,59 @@
                 <div class="col border border-dark-subtle p-4 rounded">
                   <div class="title d-flex">
                     <div class="logo rounded me-4 mb-4 bg-light">
-                      <i class="fa-solid fa-users"></i>
+                      <i class="fa-solid fa-temperature-high"></i>
                     </div>
                     <div class="food__name">
-                      <span class="" >01</span>
-                      <p class="">Soup</p>
+                      <span class="" >03</span>
+                      <p class="">Pizza</p>
+                    </div>
+                  </div>
+                  <div class="text">
+                    <p>Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.</p>
+                  </div> 
+                </div>
+              </div>
+              <!-- row 2 -->
+              <div class="row">
+                <!-- item 1 -->
+                <div class="col border border-dark-subtle p-4 rounded">
+                  <div class="title d-flex">
+                    <div class="logo rounded me-4 mb-4 bg-light">
+                      <i class="fa-solid fa-hands-asl-interpreting"></i>
+                    </div>
+                    <div class="food__name">
+                      <span class="" >04</span>
+                      <p class="">Breakfast</p>
+                    </div>
+                  </div>
+                  <div class="text">
+                    <p>Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.</p>
+                  </div> 
+                </div>
+                <!-- item 2 -->
+                <div class="col border border-dark-subtle p-4 rounded">
+                  <div class="title d-flex">
+                    <div class="logo rounded me-4 mb-4 bg-light">
+                      <i class="fa-solid fa-paintbrush"></i>
+                    </div>
+                    <div class="food__name">
+                      <span class="" >05</span>
+                      <p class="">Lunch</p>
+                    </div>
+                  </div>
+                  <div class="text">
+                    <p>Lorem ipsum dolor sit amet consectetur ipsum elit. Qui eligendi vitae sit.</p>
+                  </div> 
+                </div>
+                <!-- item 3 -->
+                <div class="col border border-dark-subtle p-4 rounded">
+                  <div class="title d-flex">
+                    <div class="logo rounded me-4 mb-4 bg-light">
+                      <i class="fa-solid fa-eraser"></i>
+                    </div>
+                    <div class="food__name">
+                      <span class="" >06</span>
+                      <p class="">Dinner</p>
                     </div>
                   </div>
                   <div class="text">
