--- a/services.html
+++ b/services.html
@@ -184,8 +184,27 @@
         </div>
       </div>
     </div>
-
   <!-- END FOOD -->
+
+  <!-- CONTACT -->
+    <div class="contact text-center">
+      <div class="overplay"></div>
+      <div class="container position-relative">
+          <h1 class="text-white">Deliciousness jumping into 
+            <br> 
+            the mouth.
+          </h1>
+          <div class="boxes d-flex justify-content-center mt-5">
+            <button type="button" class="btn btn-outline-light btn-lg me-4">
+              Read More <i class="fa-solid fa-chevron-right"></i>
+            </button>
+            <button type="button" class="btn btn-secondary btn-lg ">
+              Contact Us <i class="fa-solid fa-chevron-right"></i>
+            </button>
+          </div>
+      </div>
+    </div>
+  <!-- END CONTACT -->
   </main>
   <footer>
 
