--- a/services.html
+++ b/services.html
@@ -205,6 +205,103 @@
       </div>
     </div>
   <!-- END CONTACT -->
+
+  <!-- MENU -->
+    <div class="menu">
+      <div class="container">
+        <div class="title text-center">
+          <h3 class="fs-4">Plans</h3>
+          <h1 class="fs-1">Our Menu</h1>
+        </div>
+        <div class="dishes d-flex">
+          <div class="left me-5">
+            <!-- item 1 -->
+            <div class="item">
+              <div class="price d-flex justify-content-between">
+                <h6 class="fs-4">Slow Cooked Egg</h6>
+                <h6 class="fs-4">$79.50</h6>
+              </div>
+              <div class="text fs-5 pt-2">
+                Lorem ipsum dolor sit amet adipiscing.
+              </div>
+            </div>
+            <!-- item 2 -->
+            <div class="item pt-4">
+              <div class="price d-flex justify-content-between">
+                <h6 class="fs-4">Ravioli</h6>
+                <h6 class="fs-4">$63.75</h6>
+              </div>
+              <div class="text fs-5 pt-2">
+                Lorem ipsum dolor sit amet adipiscing.
+              </div>
+            </div>
+            <!-- item 3 -->
+            <div class="item pt-4">
+              <div class="price d-flex justify-content-between">
+                <h6 class="fs-4">Chicken Salad</h6>
+                <h6 class="fs-4">$70.50</h6>
+              </div>
+              <div class="text fs-5 pt-2">
+                Lorem ipsum dolor sit amet adipiscing.
+              </div>
+            </div>
+            <!-- item 4 -->
+            <div class="item pt-4">
+              <div class="price d-flex justify-content-between">
+                <h6 class="fs-4">Sweet Heat Salad</h6>
+                <h6 class="fs-4">$58.25</h6>
+              </div>
+              <div class="text fs-5 pt-2">
+                Lorem ipsum dolor sit amet adipiscing.
+              </div>
+            </div>
+          </div>
+          <div class="right">
+            <!-- item 1 -->
+            <div class="item">
+              <div class="price d-flex justify-content-between">
+                <h6 class="fs-4">Slow Cooked Egg</h6>
+                <h6 class="fs-4">$79.50</h6>
+              </div>
+              <div class="text fs-5 pt-2">
+                Lorem ipsum dolor sit amet adipiscing.
+              </div>
+            </div>
+            <!-- item 2 -->
+            <div class="item pt-4">
+              <div class="price d-flex justify-content-between">
+                <h6 class="fs-4">Ravioli</h6>
+                <h6 class="fs-4">$63.75</h6>
+              </div>
+              <div class="text fs-5 pt-2">
+                Lorem ipsum dolor sit amet adipiscing.
+              </div>
+            </div>
+            <!-- item 3 -->
+            <div class="item pt-4">
+              <div class="price d-flex justify-content-between">
+                <h6 class="fs-4">Chicken Salad</h6>
+                <h6 class="fs-4">$70.50</h6>
+              </div>
+              <div class="text fs-5 pt-2">
+                Lorem ipsum dolor sit amet adipiscing.
+              </div>
+            </div>
+            <!-- item 4 -->
+            <div class="item pt-4">
+              <div class="price d-flex justify-content-between">
+                <h6 class="fs-4">Sweet Heat Salad</h6>
+                <h6 class="fs-4">$58.25</h6>
+              </div>
+              <div class="text fs-5 pt-2">
+                Lorem ipsum dolor sit amet adipiscing.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- END MENU -->
   </main>
   <footer>
 
