gan xong footer, con mui ten

--- a/services.html
+++ b/services.html
@@ -304,7 +304,77 @@
   <!-- END MENU -->
   </main>
   <footer>
+  <!-- FOOTER -->
+    <div class="container">
+      <div class="content d-flex">
+        <!-- div 1 -->
+        <div class="diner me-3">
+          <a href="#">
+            <h1 class="mb-4">Diner</h1>
+          </a>
+          <p class="text-white">
+            Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet Semper at elit.
+          </p>
+          <div class="icons d-flex">
+            <!-- icon 1 -->
+            <div class="bg border border-dark-subtle p-4 rounded-3 me-2">
+              <i class="fa-brands fa-facebook-f"></i>
+            </div>
+            <!-- icon 2 -->
+            <div class="bg border border-dark-subtle p-4 rounded-3 me-2">
+              <i class="fa-brands fa-twitter"></i>
+            </div>
+            <!-- icon 3 -->
+            <div class="bg border border-dark-subtle p-4 rounded-3 me-2">
+              <i class="fa-brands fa-instagram"></i>
+            </div>
+            <!-- icon 4 -->
+            <div class="bg border border-dark-subtle p-4 rounded-3">
+              <i class="fa-brands fa-linkedin-in"></i>
+            </div>
+          </div>
+        </div>
+        <!-- div 2 -->
+        <div class="categories me-5">
+          <h1 class="mb-4">Categories</h1>
+          <p>Drinks</p>
+          <p>Food</p>
+        </div>
+        <!-- div 3 -->
+        <div class="archive me-5">
+          <h1 class="mb-4">Archives</h1>
+          <p>March 2021</p>
+        </div>
+        <!-- div 4 -->
+        <div class="subcribe">
+          <h1 class="mb-4">Subscribe to our Newsletter</h1>
+          <p class="mb-4">Enter your email and receive the latest news, 
+            <br> 
+            updates and special offers from us.
+          </p>
+          <div class="mb-3">
+            <!-- <label for="" class="form-label">Email</label> -->
+            <input type="email" class="form-control" name="" id="Email" aria-describedby="emailHelpId" placeholder="Your Email Address">
+            <!-- <small id="emailHelpId" class="form-text text-muted">Help text</small> -->
+          </div>
+          <div class="button">
+            <button type="button" class="btn btn-secondary btn-lg">Subcribe Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- END FOOTER -->
 
+  <!-- COPYRIGHT -->
+    <div class="copyright">
+      <div class="container">
+        <div class="text d-flex">
+          <p class="text-white">© 2023 Diner. All Rights Reserved | WordPress Theme by</p>
+          <a href="#">W3Layouts</a>
+        </div>
+      </div>
+    </div>
+  <!-- END COPYRIGHT -->
   </footer>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
