--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
   <!-- File Css -->
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/service_style.css">
 
 
 </head>
@@ -50,7 +50,7 @@
       <div class="direction d-flex justify-content-center fs-5 fw-semibold">
         <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;) url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item "><a href="#">Home</a></li>
+            <li class="breadcrumb-item "><a href="https://wp.w3layouts.com/diner/">Home</a></li>
             <li class="breadcrumb-item active text-white" aria-current="page">Services Page</li>
           </ol>
         </nav>
@@ -418,3 +418,4 @@
 </body>
 
 </html>
+<!-- END SERVICES -->
