--- a/elements.html
+++ b/elements.html
@@ -61,7 +61,7 @@
             <div class="left me-2 rounded-2"></div>
             <div class="right rounded-2"></div>
         </div>
-        <div class="code border">
+        <div class="code">
             <div class="code__bg">
                 <div class="text">
                     <span class="a"><</span>
@@ -89,7 +89,7 @@
                 </div>
             </div>
         </div>
-        <div class="code border">
+        <div class="code">
             <div class="code__bg">
                 <div class="text">
                     <span class="a"><</span>
@@ -110,7 +110,7 @@
             <h1>Display 3</h1>
             <h1>Display 4</h1>
         </div>
-        <div class="code border">
+        <div class="code">
             <div class="code__bg">
                 <div class="text">
                     <span class="a"><</span>
@@ -155,7 +155,7 @@
                 <footer class="blockquote-footer mt-1">Someone famous in <cite title="Source Title">Source Title</cite></footer>
             </blockquote>
         </div>
-        <div class="code border">
+        <div class="code">
             <div class="code__bg">
                 <div class="text">
                     <span class="a"><</span>
@@ -200,7 +200,7 @@
                 <footer class="blockquote-footer mt-1">Someone famous in <cite title="Source Title">Source Title</cite></footer>
             </blockquote>
         </div>
-        <div class="code border">
+        <div class="code">
             <div class="code__bg">
                 <div class="text">
                     <span class="a"><</span>
@@ -238,6 +238,42 @@
                 </div>                
             </div>
         </div>
+        <h4 class="mt-5 text-dark fw-bold">Jumbotron</h4>
+        <div class="jumbotron__bg mt-3 rounded-2">
+            <div class="jumbotron">
+                <h1 class="display-4">Hello, world!</h1>
+                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                <hr class="my-4">
+                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                <p class="lead">
+                  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                </p>
+            </div>
+        </div>
+        <div class="code">
+            <div class="code__bg">
+                <div class="text">
+                    <span class="a"><</span>
+                    <span class="b">div</span>
+                    <span class="c">class=</span>
+                    <span class="d">"jumbotron"</span>
+                    <span class="a">></span> <br>
+                    <div class="content">
+                        <pre>
+                <span class="a"><</span><span class="a">h1</span> <span class="c">class=</span><span class="d">"display-4"</span><span class="b">></span><span class="a">Hello, world!</span><span class="a"><</span><span class="a">/h1></span> 
+                <span class="a"><</span><span class="a">p</span> <span class="c">class=</span><span class="d">"lead"</span><span class="b">></span><span class="a">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</span><span class="a"><</span><span class="a">/p></span>
+                <span class="a"><</span><span class="a">hr</span> <span class="c">class=</span><span class="d">"my-4"</span><span class="a">></span>                
+                <span class="a"><</span><span class="a">p></span><span class="a">It uses utility classes for typography and spacing to space content out within the larger container.</span><span class="a"><</span><span class="a">/p></span>
+                <span class="a"><</span><span class="a">p</span> <span class="c">class=</span><span class="d">"lead"</span><span class="a">></span>
+                    <span class="a"><</span><span class="a">a</span> <span class="c">class=</span><span class="d">"btn btn-primary btn-lg"</span> <span class="c">href=</span><span class="d">"#"</span> <span class="c">role=</span><span class="d">"button"</span><span class="a">></span><span class="a">Learn more</span><span class="a"><</span><span class="a">/a></span>
+                <span class="a"><</span><span class="a">/p></span>
+            <span class="a"><</span><span class="a">/div></span>
+                        </pre>
+                    </div>  
+                </div>                
+            </div>
+        </div>
+        
     </div>
   <!-- END OVERVIEW -->
   </main>
