--- a/elements.html
+++ b/elements.html
@@ -239,7 +239,7 @@
             </div>
         </div>
         <h4 class="mt-5 text-dark fw-bold">Jumbotron</h4>
-        <div class="jumbotron__bg mt-3 rounded-2">
+        <div class="jumbotron__bg mt-3">
             <div class="jumbotron">
                 <h1 class="display-4">Hello, world!</h1>
                 <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
@@ -273,7 +273,66 @@
                 </div>                
             </div>
         </div>
-        
+        <h4 class="mt-5 text-dark fw-bold">Fluid Jumbotron</h4>
+        <div class="jumbotron__bg mt-3">
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">Fluid jumbotron</h1>
+                  <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                </div>
+            </div>
+        </div>
+        <div class="code">
+            <div class="code__bg">
+                <div class="text">
+                    <span class="a"><</span>
+                    <span class="b">div</span>
+                    <span class="c">class=</span>
+                    <span class="d">"jumbotron jumbotron-fluid"</span>
+                    <span class="a">></span> <br>
+                    <div class="content">
+                        <pre>
+                <span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"container"</span>
+                    <span class="b"><</span><span class="b">h1</span> <span class="c">class=</span><span class="d">"display-4"</span><span class="a">></span><span class="a">Fluid jumbotron</span><span class="a"><</span><span class="a">/h1></span> 
+                    <span class="a"><</span><span class="a">p</span> <span class="c">class=</span><span class="d">"lead"</span><span class="b">></span><span class="a">This is a modified jumbotron that occupies the entire horizontal space of its parent.</span><span class="a"><</span><span class="a">/p></span>
+                <span class="a"><</span><span class="a">/div></span>
+            <span class="a"><</span><span class="a">/div></span>
+                        </pre>
+                    </div>  
+                </div>                
+            </div>
+        </div>
+        <h4 class="mt-5 text-dark fw-bold">Buttons</h4>
+        <div class="buttons mt-4 border">
+            <div class="buttons__bg ">
+                <button type="button" class="btn btn-primary">Primary</button>
+                <button type="button" class="btn btn-secondary">Secondary</button>
+                <button type="button" class="btn btn-success">Success</button>
+                <button type="button" class="btn btn-danger">Danger</button>
+                <button type="button" class="btn btn-warning">Warning</button>
+                <button type="button" class="btn btn-info">Info</button>
+                <button type="button" class="btn btn-light">Light</button>
+                <button type="button" class="btn btn-dark">Dark</button>
+                <button type="button" class="btn btn-link">Link</button>
+            </div>
+        </div>
+        <div class="code">
+            <div class="code__bg">
+                <div class="text">
+                    <pre>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-primary"</span><span class="a">></span>Primary<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-secondary"</span><span class="a">></span>Secondary<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-success"</span><span class="a">></span>Success<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-danger"</span><span class="a">></span>Danger<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-warning"</span><span class="a">></span>Warning<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-info"</span><span class="a">></span>Info<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-light"</span><span class="a">></span>Light<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-dark"</span><span class="a">></span>Dark<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-link"</span><span class="a">></span>Link<span class="a"><</span><span class="a">/button></span>
+                    </pre>
+                </div>
+            </div>
+        </div>
     </div>
   <!-- END OVERVIEW -->
   </main>
