--- a/elements.html
+++ b/elements.html
@@ -303,7 +303,7 @@
             </div>
         </div>
         <h4 class="mt-5 text-dark fw-bold">Buttons</h4>
-        <div class="buttons mt-4 border">
+        <div class="buttons mt-4 border rounded-2">
             <div class="buttons__bg ">
                 <button type="button" class="btn btn-primary">Primary</button>
                 <button type="button" class="btn btn-secondary">Secondary</button>
@@ -329,6 +329,52 @@
 <span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-light"</span><span class="a">></span>Light<span class="a"><</span><span class="a">/button></span>
 <span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-dark"</span><span class="a">></span>Dark<span class="a"><</span><span class="a">/button></span>
 <span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-link"</span><span class="a">></span>Link<span class="a"><</span><span class="a">/button></span>
+                    </pre>
+                </div>
+            </div>
+        </div>
+        <h4 class="mt-5 text-dark fw-bold">Outline buttons</h4>
+        <div class="outline mt-4 border rounded-2">
+            <div class="outline__bg">
+                <button type="button" class="btn btn-outline-primary">Primary</button>
+                <button type="button" class="btn btn-outline-secondary">Secondary</button>
+                <button type="button" class="btn btn-outline-success">Success</button>
+                <button type="button" class="btn btn-outline-danger">Danger</button>
+                <button type="button" class="btn btn-outline-warning">Warning</button>
+                <button type="button" class="btn btn-outline-info">Info</button>
+                <button type="button" class="btn btn-outline-light">Light</button>
+                <button type="button" class="btn btn-outline-dark">Dark</button>
+            </div>
+        </div>
+        <div class="code">
+            <div class="code__bg">
+                <div class="text">
+                    <pre>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-outline-primary"</span><span class="a">></span>Primary<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-outline-secondary"</span><span class="a">></span>Secondary<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-outline-success"</span><span class="a">></span>Success<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-outline-danger"</span><span class="a">></span>Danger<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-outline-warning"</span><span class="a">></span>Warning<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-outline-info"</span><span class="a">></span>Info<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-outline-light"</span><span class="a">></span>Light<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-outline-dark"</span><span class="a">></span>Dark<span class="a"><</span><span class="a">/button></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-outline-link"</span><span class="a">></span>Link<span class="a"><</span><span class="a">/button></span>
+                    </pre>
+                </div>
+            </div>
+        </div>
+        <h4 class="mt-5 text-dark fw-bold">Flex Properties</h4>
+        <h5 class="mt-5 fw-bold">d-flex</h5>
+        <div class="flex border rounded-2 mt-4">
+            <div class="flex__bg">
+                <div class="d-flex p-2 bd-highlight">I'm a flexbox container!</div>
+            </div>
+        </div>
+        <div class="code">
+            <div class="code__bg">
+                <div class="text">
+                    <pre>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"d-flex p-2 bd-highlight"</span><span class="a">></span><span class="d">I'm a flexbox container!</span><span class="a"><</span><span class="a">/div></span>
                     </pre>
                 </div>
             </div>
