--- a/elements.html
+++ b/elements.html
@@ -64,18 +64,11 @@
         <div class="code">
             <div class="code__bg">
                 <div class="text">
-                    <span class="a"><</span>
-                    <span class="b">div</span>
-                    <span class="c">class=</span>
-                    <span class="d">"container"</span>
-                    <span class="a">></span> <br>
-                    <span class="a"><</span>
-                    <span class="f">!--</span>
-                    <span class="a">Content here</span>
-                    <span class="a">--</span>
-                    <span class="a">></span> <br>
-                    <span class="a"><</span> 
-                    <span class="a">/div></span> 
+                    <pre>
+<span class="a"><</span><span class="b">div</span> <span class="c">class=</span><span class="d">"container"</span><span class="a">></span>
+<span class="a"><</span><span class="f">!--</span><span class="a">Content here</span><span class="a">--</span><span class="a">></span>                       
+<span class="a"><</span><span class="a">/div></span>
+                    </pre>
                 </div>                
             </div>
         </div>
@@ -346,7 +339,7 @@
                 <button type="button" class="btn btn-outline-dark">Dark</button>
             </div>
         </div>
-        <div class="code">
+        <div class="code ">
             <div class="code__bg">
                 <div class="text">
                     <pre>
@@ -377,6 +370,128 @@
 <span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"d-flex p-2 bd-highlight"</span><span class="a">></span><span class="d">I'm a flexbox container!</span><span class="a"><</span><span class="a">/div></span>
                     </pre>
                 </div>
+            </div>
+        </div>
+        <h5 class="mt-5 fw-bold">d-inline-flex</h5>
+        <div class="inline border rounded-2 mt-4">
+            <div class="inline__bg">
+                <div class="d-inline-flex p-2 bd-highlight">I'm an inline flexbox container!</div>
+            </div>
+        </div>
+        <div class="code">
+            <div class="code__bg">
+                <div class="text">
+                    <pre>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"d-inline-flex p-2 bd-highlight"</span><span class="a">></span><span class="d">I'm a flexbox container!</span><span class="a"><</span><span class="a">/div></span>
+                    </pre>
+                </div>
+            </div>
+        </div>
+        <h4 class="mt-5 text-dark fw-bold">Flex Direction</h4>
+        <div class="direction d-flex">
+            <div class="direction__left me-5">
+                <h5 class="mt-5 fw-bold">flex-row</h5>
+                <div class="row border rounded-2 mt-4">
+                    <div class="row__bg">
+                        <div class="d-flex flex-row bd-highlight">
+                            <div class="p-2 bd-highlight">Flex item 1</div>
+                            <div class="p-2 bd-highlight">Flex item 2</div>
+                            <div class="p-2 bd-highlight">Flex item 3</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="code">
+                    <div class="code__bg">
+                        <div class="text">
+                            <pre>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"d-flex flex-row bd-highlight mb-3"</span><span class="a">></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"p-2 bd-highlight</span><span class="a">></span><span class="a">Flex item 1</span><span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"p-2 bd-highlight</span><span class="a">></span><span class="a">Flex item 2</span><span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"p-2 bd-highlight</span><span class="a">></span><span class="a">Flex item 3</span><span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">/div></span>
+                            </pre>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="direction__right">
+                <h5 class="mt-5 fw-bold">flex-row-reverse</h5>
+                <div class="reverse border rounded-2 mt-4">
+                    <div class="reverse__bg">
+                        <div class="d-flex flex-row-reverse bd-highlight">
+                            <div class="p-2 bd-highlight">Flex item 1</div>
+                            <div class="p-2 bd-highlight">Flex item 2</div>
+                            <div class="p-2 bd-highlight">Flex item 3</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="code">
+                    <div class="code__bg">
+                        <div class="text">
+                            <pre>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"d-flex flex-row-reverse bd-highlight mb-3"</span><span class="a">></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"p-2 bd-highlight</span><span class="a">></span><span class="a">Flex item 1</span><span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"p-2 bd-highlight</span><span class="a">></span><span class="a">Flex item 2</span><span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"p-2 bd-highlight</span><span class="a">></span><span class="a">Flex item 3</span><span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">/div></span>
+                            </pre>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h4 class="mt-5 text-dark fw-bold">Justify Content</h4>
+        <div class="justify border rounded-2 mt-4">
+            <div class="justify__bg">
+                <div class="d-flex justify-content-start mb-3">
+                    <div class="p-2 bd-highlight">Flex item 1</div>
+                    <div class="p-2 bd-highlight">Flex item 2</div>
+                    <div class="p-2 bd-highlight">Flex item 3</div>
+                </div>
+                <div class="d-flex justify-content-end mb-3">
+                    <div class="p-2 bd-highlight">Flex item 1</div>
+                    <div class="p-2 bd-highlight">Flex item 2</div>
+                    <div class="p-2 bd-highlight">Flex item 3</div>
+                </div>
+                <div class="d-flex justify-content-center mb-3">
+                    <div class="p-2 bd-highlight">Flex item 1</div>
+                    <div class="p-2 bd-highlight">Flex item 2</div>
+                    <div class="p-2 bd-highlight">Flex item 3</div>
+                </div>
+                <div class="d-flex justify-content-between mb-3">
+                    <div class="p-2 bd-highlight">Flex item 1</div>
+                    <div class="p-2 bd-highlight">Flex item 2</div>
+                    <div class="p-2 bd-highlight">Flex item 3</div>
+                </div>
+                <div class="d-flex justify-content-around">
+                    <div class="p-2 bd-highlight">Flex item 1</div>
+                    <div class="p-2 bd-highlight">Flex item 2</div>
+                    <div class="p-2 bd-highlight">Flex item 3</div>
+                </div>
+            </div>
+        </div>
+        <div class="code">
+            <div class="code__bg">
+                <div class="text">
+                    <pre>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"d-flex justify-content-start"</span><span class="a">></span><span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"d-flex justify-content-end"</span><span class="a">></span><span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"d-flex justify-content-center"</span><span class="a">></span><span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"d-flex justify-content-between"</span><span class="a">></span><span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"d-flex justify-content-around"</span><span class="a">></span><span class="a"><</span><span class="a">/div></span>
+                    </pre>
+                </div>
+            </div>
+        </div>
+        <h4 class="mt-5 text-dark fw-bold">Badges</h4>
+        <div class="badge border rounded-2 mt-4">
+            <div class="badge__bg">
+                <h1 class="text-dark">Example heading <span class="badge badge-secondary">New</span></h1>
+                <h2>Example heading <span class="badge badge-secondary">New</span></h2>
+                <h3>Example heading <span class="badge badge-secondary">New</span></h3>
+                <h4>Example heading <span class="badge badge-secondary">New</span></h4>
+                <h5>Example heading <span class="badge badge-secondary">New</span></h5>
+                <h6>Example heading <span class="badge badge-secondary">New</span></h6>
             </div>
         </div>
     </div>
