--- a/elements.html
+++ b/elements.html
@@ -484,14 +484,27 @@
             </div>
         </div>
         <h4 class="mt-5 text-dark fw-bold">Badges</h4>
-        <div class="badge border rounded-2 mt-4">
+        <div class="badges border rounded-2 mt-4">
             <div class="badge__bg">
-                <h1 class="text-dark">Example heading <span class="badge badge-secondary">New</span></h1>
-                <h2>Example heading <span class="badge badge-secondary">New</span></h2>
-                <h3>Example heading <span class="badge badge-secondary">New</span></h3>
-                <h4>Example heading <span class="badge badge-secondary">New</span></h4>
-                <h5>Example heading <span class="badge badge-secondary">New</span></h5>
-                <h6>Example heading <span class="badge badge-secondary">New</span></h6>
+                <h1 class="text-dark">Example heading <span class="badge badge-secondary text-dark">New</span></h1>
+                <h2 class="text-dark">Example heading <span class="badge badge-secondary text-dark">New</span></h2>
+                <h3 class="text-dark">Example heading <span class="badge badge-secondary text-dark">New</span></h3>
+                <h4 class="text-dark">Example heading <span class="badge badge-secondary text-dark">New</span></h4>
+                <h5 class="text-dark">Example heading <span class="badge badge-secondary text-dark">New</span></h5>
+                <h6 class="text-dark">Example heading <span class="badge badge-secondary text-dark">New</span></h6>
+            </div>
+        </div>
+        <div class="code">
+            <div class="code__bg">
+                <div class="text">
+                    <pre>
+<span class="a"><</span><span class="a">h1></span><span class="a">Example heading </span><span class="a"><</span><span class="a">span</span> <span class="c">class=</span><span class="d">"badge badge-secondary"</span><span class="a">></span><span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"d-flex justify-content-end"</span><span class="a">></span><span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"d-flex justify-content-center"</span><span class="a">></span><span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"d-flex justify-content-between"</span><span class="a">></span><span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"d-flex justify-content-around"</span><span class="a">></span><span class="a"><</span><span class="a">/div></span>
+                    </pre>
+                </div>
             </div>
         </div>
     </div>
