--- a/elements.html
+++ b/elements.html
@@ -886,8 +886,7 @@ Launch demo modal
 
 
 <span class="a"><</span><span class="a">!-- Modal --</span><span class="a">></span>
-<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"modal fade"</span> <span class="c">id=</span><span class="d">"exampleModal"</span> <span class="c">id=</span><span class="d">"exampleModal"</span> <span class="c">tabindex=</span><span class="d">"-1"</span>
-<span class="a">></span> <span class="c">role=</span><span class="d">"dialog"</span> <span class="c">aria-labelledby=</span><span class="d">"exampleModalLabel"</span> <span class="c">aria-hidden=</span><span class="d">"true"</span><span class="a">></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"modal fade"</span> <span class="c">id=</span><span class="d">"exampleModal"</span> <span class="c">tabindex=</span><span class="d">"-1"</span> <span class="c">role=</span><span class="d">"dialog"</span> <span class="c">aria-labelledby=</span><span class="d">"exampleModalLabel"</span> <span class="c">aria-hidden=</span><span class="d">"true"</span><span class="a">></span>
 <span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"modal-dialog"</span> <span class="c">role=</span><span class="d">"document"</span><span class="a">></span>
     <span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"modal-content"</span><span class="a">></span>
         <span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"modal-header"</span><span class="a">></span>
@@ -904,6 +903,68 @@ Launch demo modal
         <span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-primary"</span><span class="a">></span>Save changes<span class="a"><</span><span class="a">/button></span>
         <span class="a"><</span><span class="a">/div></span>
     <span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">/div></span>
+                    </pre>
+                </div>
+            </div>
+        </div>
+        <h5 class="mt-5 fw-bold">Vertically centered</h5>
+        <div class="verti border rounded-2 mt-4">
+            <div class="verti__bg">
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
+    Launch demo modal
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="cam_nhat">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+            </div>
+        </div>
+        <div class="code">
+            <div class="code__bg">
+                <div class="text">
+                    <pre>
+<span class="a"><</span><span class="a">!-- Button trigger modal --</span><span class="a">></span>
+<span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-primary"</span> <span class="c">data-toggle=</span><span class="d">"modal"</span> <span class="c">data-target=</span><span class="d">"#exampleModalCenter"</span><span class="a">></span>
+Launch demo modal
+<span class="a"><</span><span class="a">/button></span>
+
+
+<span class="a"><</span><span class="a">!-- Modal --</span><span class="a">></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"modal fade"</span> <span class="c">id=</span><span class="d">"exampleModalCenter"</span> <span class="c">tabindex=</span><span class="d">"-1"</span> <span class="c">role=</span><span class="d">"dialog"</span> <span class="c">aria-labelledby=</span><span class="d">"exampleModalCenterTitle"</span> <span class="c">aria-hidden=</span><span class="d">"true"</span><span class="a">></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"modal-dialog modal-dialog-centered"</span> <span class="c">role=</span><span class="d">"document"</span><span class="a">></span>
+<span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"modal-content"</span><span class="a">></span>
+    <span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"modal-header"</span><span class="a">></span>
+    <span class="a"><</span><span class="a">h5</span> <span class="c">class=</span><span class="d">"modal-title"</span> <span class="c">id=</span><span class="d">"exampleModalLongTitle"</span><span class="a">></span>Modal title<span class="a"><</span><span class="a">/h5></span>
+    <span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"close"</span> <span class="c">data-dismiss=</span><span class="d">"modal"</span> <span class="c">aria-label=</span><span class="d">"Close"</span><span class="a">></span>
+        <span class="a"><</span><span class="a">span</span> <span class="c">aria-hidden=</span><span class="d">"true"</span><span class="a">></span><span class="a">x</span><span class="a"><</span><span class="a">/span></span>
+    <span class="a"><</span><span class="a">/button></span>
+    <span class="a"><</span><span class="a">/div></span>
+    <span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"modal-body"</span><span class="a">></span>
+    . . . 
+    <span class="a"><</span><span class="a">/div></span>
+    <span class="a"><</span><span class="a">div</span> <span class="c">class=</span><span class="d">"modal-footer"</span><span class="a">></span>
+    <span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-secondary"</span> <span class="c">data-dismiss=</span><span class="d">"modal"</span><span class="a">></span>Close<span class="a"><</span><span class="a">/button></span>
+    <span class="a"><</span><span class="a">button</span> <span class="c">type=</span><span class="d">"button"</span> <span class="c">class=</span><span class="d">"btn btn-primary"</span><span class="a">></span>Save changes<span class="a"><</span><span class="a">/button></span>
+    <span class="a"><</span><span class="a">/div></span>
+<span class="a"><</span><span class="a">/div></span>
 <span class="a"><</span><span class="a">/div></span>
 <span class="a"><</span><span class="a">/div></span>
                     </pre>
