--- a/404_page.html
+++ b/404_page.html
@@ -32,7 +32,7 @@
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search here..." aria-label="Search">
             <i class="fa-solid fa-magnifying-glass fs-5"></i>
-            <button class="btn" id="switchButton" title="Click to switch theme">
+            <button class="btn" id="switchButton" title="Click to switch theme" onclick="myFunction()">
               <i class="fa-regular fa-moon btn fs-4 me-2 text-white" id="moon"></i>
               <i class="fa-regular fa-sun btn fs-4 me-2 " id="sun"></i>
             </button>
@@ -186,11 +186,8 @@
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
   </script>
 
-  <!-- file JS -->
-  <script src="./js/script.js"></script>
-
-  <!-- Back to top animation -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+   <!-- file JS -->
+   <script src="./js/script.js"></script>
 
 </body>
 
